# ViralRecall_3.0

./: .gitignore  LICENSE  README.md  download_database.py  environment.yaml  gbk_parse.py  paper.md  plot_vreg.py  pyproject.toml  tigtog.py  viralrecall.py
hmm/: mirusMCP.hmm
paper/: paper.bib  paper.md
src/: log.py  plot_vreg.py  proteins.py  utils.py  vreg_annot.py
src/ViralRecall_3.0.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_input/: Chlamy_punui_contig.fna  cat_genomes.fna.fai
test_out/: batch_summary.txt  test_out.cds.fasta  test_out.faa  test_out.gff  test_out.hmmout  test_out.sub.tsv  test_out.tblout  test_out.tsv
tests/: test_download_database.py  test_log_and_proteins.py  test_utils.py  test_vreg_annot.py
tests/data/: cat_genomes.fna
viralrecall/: download_database.py  log.py  plot_vreg.py  proteins.py  utils.py  viralrecall.py  vreg_annot.py
viralrecall.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
