[project]
name = "viralrecall"
dynamic = ["version"]
description = "Tool to identify giant viruses integrated into eukaryotic genomes"
requires-python = ">=3.10"
authors = [
    {name = "Abdeali M. Jivaji", email = "abdeali@vt.edu"},
    {name = "Frank O. Aylward", email = "faylward@vt.edu"}
]
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "numpy == 2.2.*",
    "pyhmmer >= 0.11.3",
    "pyrodigal-gv == 0.3.*",
    "pyfaidx==0.9.0",
    "pandas==2.2.*",
    "progressbar==2.5",
    "requests==2.32.*",
    "matplotlib == 3.10.*"
]
keywords = ["giant virus", "virus", "genomics", "viralrecall"]
[dependency-groups]
test = [
    "pytest == 8.2.0"
]
lint = [
    "ruff == 0.4.4",
]
[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "viralrecall.viralrecall.__version__"}

[project.scripts]
viralrecall = "viralrecall.viralrecall:main"
viralrecall_database = "viralrecall.download_database:main"